--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,8 +88,32 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
-      - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
+      - name: "Test application"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -pl '!e2e-test'
+
+  run_e2e_test:
+    name: "Run e2e tests"
+    runs-on: ubuntu-latest
+    needs:
+      - pre_commit
+    if: >
+      !contains(github.event.head_commit.message, '[skip tests]') &&
+      !contains(github.event.head_commit.message, '[skip build]')
+    strategy:
+      matrix:
+        repoVersion: [ 7.3.0.8, 7.4.1.6, 23.2.1 ]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
+      - name: "Login to Quay.io"
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
+      - name: "Run e2e tests"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -pl 'e2e-test' -Drepository.tag=${{ matrix.repoVersion }}
 
 
   push_docker_images:
