--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -1,14 +1,3 @@
-camel:
-  springboot:
-    main-run-controller: true
-  component:
-    aws2-sqs:
-      override-endpoint: true
-      uri-endpoint-override: http://localhost:4566
-      access-key: dummy_access_key
-      secret-key: dummy_secret_key
-
-hyland-experience:
-  insight:
-    prediction:
-      endpoint: aws2-sqs://arn:aws:sqs:us-east-1:000000000000:hxinsight-prediction-queue
+prediction-listener:
+  prediction-processor-trigger-endpoint: "quartz:prediction-processor-trigger?cron=0+*/1+*+?+*+*"
+  predictions-endpoint: "http:localhost:8080/predictions?pageSize=10"
