--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -12,6 +12,10 @@ hyland-experience:
   insight:
     prediction:
       endpoint: aws2-sqs://arn:aws:sqs:us-east-1:000000000000:hxinsight-prediction-queue
+    prediction-listener:
+      predictions-endpoint: http:localhost:8080/predictions?pageSize=10
+      prediction-processor-trigger-endpoint: quartz:prediction-processor-trigger?cron=0+*/1+*+?+*+*
+
 alfresco:
   repository:
     nodes:
