--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -6,4 +6,4 @@ wiremock.tag=@dist.wiremock.version@
 transform.router.tag=@dist.transform.router.version@
 transform.core.aio.tag=@dist.transform.core.aio.version@
 sfs.tag=@dist.transform.sfs.version@
-hxi.connector.tag=feature_ACS-6390-Update-Repo-with-predictions-e2e-test-1834
+hxi.connector.tag=latest
