--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>common-test</module>
         <module>common</module>
+        <module>common-authentication</module>
         <module>bulk-ingester</module>
         <module>live-ingester</module>
         <module>prediction-applier</module>
@@ -176,6 +177,11 @@
             <dependency>
                 <groupId>org.alfresco</groupId>
                 <artifactId>alfresco-hxinsight-connector-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.alfresco</groupId>
+                <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
