--- a/e2e-test/pom.xml
+++ b/e2e-test/pom.xml
@@ -89,6 +89,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>**/*E2eTest.java</include>
+                        <include>**/*E2ETest.java</include>
+                    </includes>
+                    <skipTests>${skipE2eTests}</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
