--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -13,7 +13,7 @@ hyland-experience:
     prediction:
       endpoint: direct:test
     prediction-listener:
-      pool-period: 1000000
+      pool-period: 300_000 #5 min
       predictions-source-endpoint: http:localhost:4000/predictions?pageSize=10
       internal-predictions-buffer-endpoint: activemq:queue:predictions-buffer
 
