ACS-6826: Ensure E2Es are excluded from mvn package phase (surefire plugin)

--- a/pom.xml
+++ b/pom.xml
@@ -453,6 +453,8 @@
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                         <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*E2eTest.java</exclude>
+                        <exclude>**/*E2ETest.java</exclude>
                         <exclude>**/*ManualTest.java</exclude>
                     </excludes>
                     <skipTests>${skipUnitTests}</skipTests>
