--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -13,7 +13,7 @@ hyland-experience:
     prediction:
       endpoint: direct:test
     prediction-listener:
-      pool-period: 300_000 #5 min
+      poll-period: 300_000 #5 min
       predictions-source-endpoint: direct:mocked
       internal-predictions-buffer-endpoint: activemq:queue:predictions-buffer
 
@@ -27,6 +27,3 @@ alfresco:
         attempts: 10
         initial-delay: 500
         delay-multiplier: 2
-logging:
-  level:
-    org.alfresco: DEBUG
