--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
       !contains(github.event.head_commit.message, '[skip build]')
     strategy:
       matrix:
-        subproject: [ "bulk-ingester", "common", "common-authentication", "common-test", "distribution",
+        subproject: [ "bulk-ingester", "common", "common-authentication", "common-test",
                       "live-ingester", "prediction-applier", "prediction-applier-extension" ]
     steps:
       - uses: actions/checkout@v3
@@ -94,6 +94,27 @@ jobs:
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
       - name: "Test application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -pl '${{ matrix.subproject }}' -am -DfailIfNoTests=false
+
+  test_distirbution:
+    name: "Build application with distribution profile"
+    runs-on: ubuntu-latest
+    needs:
+      - pre_commit
+    if: >
+      !contains(github.event.head_commit.message, '[skip tests]') &&
+      !contains(github.event.head_commit.message, '[skip build]')
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
+      - name: "Login to Quay.io"
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
+      - name: "Build application with distribution profile"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -Pdistribution -DskipTests
 
   run_e2e_test:
     name: "Run e2e tests"
