ACS-7450 Configuration to support extra options for each target MIME type.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -28,6 +28,15 @@ alfresco:
     request:
       endpoint: activemq:queue:acs-repo-transform-request?jmsMessageType=Text
       timeout: 20000
+      options:
+        "[image/png]":
+          resizeWidth: 3840
+          resizeHeight: 3840
+          allowEnlargement: false
+        "[image/jpeg]":
+          resizeWidth: 3840
+          resizeHeight: 3840
+          allowEnlargement: false
     response:
       queue-name: org.alfresco.hxinsight-connector.transform.response
       endpoint: activemq:queue:${alfresco.transform.response.queue-name}
