--- a/prediction-applier/pom.xml
+++ b/prediction-applier/pom.xml
@@ -17,6 +17,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-hxinsight-connector-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
