ACS-6391 Remove prediction model from common code.

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,11 @@
             </dependency>
             <dependency>
                 <groupId>org.alfresco</groupId>
+                <artifactId>alfresco-hxinsight-connector-prediction-applier</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.alfresco</groupId>
                 <artifactId>alfresco-elasticsearch-database-connector</artifactId>
                 <version>${alfresco-db-connector.version}</version>
             </dependency>
