--- a/e2e-test/pom.xml
+++ b/e2e-test/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-hxinsight-connector-prediction-applier</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
             <artifactId>alfresco-hxinsight-connector-common</artifactId>
             <scope>test</scope>
         </dependency>
