ACS-7545: [HxI PH] Read predictions from AMQ rather than SNS

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -307,8 +307,7 @@ services:
     environment:
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=*:5009,server=y,suspend=n
       LOGGING_LEVEL_ORG_ALFRESCO: DEBUG
-      CAMEL_COMPONENT_AWS2-SQS_URI-ENDPOINT-OVERRIDE: http://aws-mock:4566
-      HYLAND-EXPERIENCE_INSIGHT_PREDICTION-LISTENER_HXI-PREDICTIONS-ENDPOINT: http://hxinsight-mock:8080/prediction-batches?httpMethod=GET
+      HYLAND-EXPERIENCE_INSIGHT_PREDICTIONS_SOURCE-ENDPOINT: http://hxinsight-mock:8080/prediction-batches?httpMethod=GET
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
       SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_HYLAND-EXPERIENCE-AUTH_TOKEN-URI: http://hxinsight-mock:8080/token
     ports:
@@ -335,9 +334,8 @@ services:
         limits:
           memory: 256m
     environment:
-      SERVICES: s3,sqs
+      SERVICES: s3
       BUCKET_NAME: hxinsight-bucket-mock
-      SQS_QUEUE_NAME: hxinsight-prediction-queue
     ports:
       - "4566:4566"
     volumes:
