--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ hs_err_pid*
 
 # This file is generated from distribution/src/main/resources/docker-compose-origin/.env
 distribution/src/main/resources/docker-compose/.env
+# This is produced by the maven-shade-plugin
+dependency-reduced-pom.xml
