--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
             </dependency>
             <dependency>
                 <groupId>org.alfresco</groupId>
+                <artifactId>alfresco-hxinsight-connector-prediction-applier-extension</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.alfresco</groupId>
                 <artifactId>alfresco-elasticsearch-database-connector</artifactId>
                 <version>${alfresco-db-connector.version}</version>
             </dependency>
