--- a/prediction-applier/pom.xml
+++ b/prediction-applier/pom.xml
@@ -21,6 +21,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-hxinsight-connector-prediction-applier-extension</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
