--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -35,9 +35,9 @@ hyland-experience:
     environment-key: hxai-env-key
   insight:
     predictions:
-      source-endpoint: direct:mocked
       buffer-endpoint: activemq:queue:predictions-buffer
       poll-period-millis: 300_000 # 5 minutes
+      source-base-url: direct:mocked
 
 alfresco:
   repository:
