PRODSEC-9078 Remove dummy credentials from application.

--- a/bulk-ingester/src/main/resources/application.yml
+++ b/bulk-ingester/src/main/resources/application.yml
@@ -2,8 +2,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/alfresco
-    username: alfresco
-    password: alfresco
+    username:
+    password:
     hikari:
       maximumPoolSize: 20
 
