--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,19 +1,6 @@
 spring:
   main:
     web-application-type: none
-  security:
-    oauth2:
-      client:
-        registration:
-          hyland-experience-auth:
-            authorization-grant-type: urn:hyland:params:oauth:grant-type:api-credentials
-            client-id:
-            client-secret:
-            client-name: ${hyland-experience.authorization.application-name}
-            scope: hxp.integrations
-        provider:
-          hyland-experience-auth:
-            token-uri: http://localhost:8001/token
 
 camel:
   springboot.main-run-controller: true
@@ -69,3 +56,21 @@ hyland-experience:
       endpoint: ${hyland-experience.insight.base-url}/presigned-urls?httpMethod=POST&throwExceptionOnFailure=false
   ingester:
     endpoint: ${hyland-experience.insight.base-url}/ingestion-events?httpMethod=POST&throwExceptionOnFailure=false
+
+auth:
+  providers:
+    hyland-experience:
+      type: oauth2
+      client-id:
+      client-secret:
+      token-uri: http://localhost:8001/token
+      grant-type: urn:hyland:params:oauth:grant-type:api-credentials
+      scope: hxp.integrations
+    alfresco:
+      type: basic
+      username:
+      password:
+  retry:
+    attempts: 10
+    initial-delay: 500
+    delay-multiplier: 2
