--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -316,10 +316,14 @@ services:
       LOGGING_LEVEL_ORG_ALFRESCO: DEBUG
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_HYLAND-EXPERIENCE-AUTH_CLIENT-ID: dummy-client-id
-      SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_HYLAND-EXPERIENCE-AUTH_CLIENT-SECRET: dummy-client-pass
+      SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_HYLAND-EXPERIENCE-AUTH_CLIENT-SECRET: dummy-client-secret
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_ALFRESCO_CLIENT-ID: dummy-client-id
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_ALFRESCO_CLIENT-SECRET: dummy-client-secret
+      SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_HYLAND-EXPERIENCE-AUTH_TOKEN-URI: http://hxinsight-mock:8080/token
+      SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_ALFRESCO_TOKEN-URI: ""
+      HYLAND-EXPERIENCE_INSIGHT_PREDICTIONS_SOURCE-BASE-URL: http://hxinsight-mock:8080
       HYLAND-EXPERIENCE_AUTHORIZATION_ENVIRONMENT-KEY: hxai-env-key
+      ALFRESCO_REPOSITORY_BASE-URL: http://alfresco:8080
       ALFRESCO_REPOSITORY_USERNAME: admin
       ALFRESCO_REPOSITORY_PASSWORD: admin
     ports:
