ACS-7605: Making AuthSupport a bean. Adding docker-compose sample setup for keycloak.

--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -13,3 +13,4 @@ SEARCH_ENTERPRISE_TAG=@dist.search.enterprise.version@
 LOCALSTACK_TAG=@dist.localstack.version@
 WIREMOCK_TAG=@dist.wiremock.version@
 HXINSIGHT_CONNECTOR_TAG=@project.version@
+HOST_IP=
