--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,19 +1,6 @@
 spring:
   main:
     web-application-type: none
-  security:
-    oauth2:
-      client:
-        registration:
-          hyland-experience-auth:
-            authorization-grant-type: urn:hyland:params:oauth:grant-type:api-credentials
-            client-id:
-            client-secret:
-            client-name: ${hyland-experience.authorization.application-name}
-            scope: hxp.integrations
-        provider:
-          hyland-experience-auth:
-            token-uri: http://localhost:8001/token
 
 camel:
   springboot.main-run-controller: true
@@ -58,14 +45,29 @@ alfresco:
 hyland-experience:
   insight:
     base-url: http://localhost:8001
-  authentication:
-    refresh-delay-minutes: 55
-  authorization:
-    application-name: acs-insight-connector
-    service-user: insight-acs
-    environment-key:
   storage:
     location:
       endpoint: ${hyland-experience.insight.base-url}/presigned-urls?httpMethod=POST&throwExceptionOnFailure=false
   ingester:
     endpoint: ${hyland-experience.insight.base-url}/ingestion-events?httpMethod=POST&throwExceptionOnFailure=false
+
+auth:
+  providers:
+    hyland-experience:
+      type: oauth2
+      client-id:
+      client-secret:
+      token-uri: http://localhost:8001/token
+      grant-type: urn:hyland:params:oauth:grant-type:api-credentials
+      scope:
+        - hxp.integrations
+      environment-key: hxi-env-key
+      client-name: acs-insight-connector
+    alfresco:
+      type: basic
+      username:
+      password:
+  retry:
+    attempts: 10
+    initial-delay: 500
+    delay-multiplier: 2
