--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -1,38 +1,12 @@
 spring:
   main:
     web-application-type: none
-  security:
-    oauth2:
-      client:
-        registration:
-          hyland-experience-auth:
-            authorization-grant-type: urn:hyland:params:oauth:grant-type:api-credentials
-            client-id:
-            client-secret:
-            client-name: ${hyland-experience.authorization.application-name}
-            scope: hxp.integrations
-          alfresco:
-            client-id:
-            client-secret:
-            authorization-grant-type: client_credentials
-        provider:
-          hyland-experience-auth:
-            token-uri: http://localhost:8001/token
-          alfresco:
-            token-uri: http://localhost:8002/token
-
 
 camel:
   springboot:
     main-run-controller: true
 
 hyland-experience:
-  authentication:
-    refresh-delay-minutes: 55
-  authorization:
-    application-name: acs-insight-connector
-    service-user: insight-acs
-    environment-key:
   insight:
     predictions:
       source-base-url: http://localhost:8001
@@ -41,9 +15,29 @@ hyland-experience:
 alfresco:
   repository:
     base-url: http://alfresco:8080
-    username:
-    password:
     retry:
       attempts: 10
       initial-delay: 500
       delay-multiplier: 2
+
+auth:
+  providers:
+    hyland-experience:
+      type: oauth2
+      client-id:
+      client-secret:
+      token-uri: http://localhost:8001/token
+      grant-type: urn:hyland:params:oauth:grant-type:api-credentials
+      scope:
+       - hxp.integrations
+      environment-key: hxi-env-key
+      client-name: acs-insight-connector
+    alfresco:
+      type: basic
+      client-id:
+      username:
+      password:
+  retry:
+    attempts: 10
+    initial-delay: 500
+    delay-multiplier: 2
