Fix failing start-up of prediction-applier and error in live-ingester

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -276,9 +276,9 @@ services:
       ALFRESCO_TRANSFORM_SHARED-FILE-STORE_HOST: http://shared-file-store
       ALFRESCO_TRANSFORM_SHARED-FILE-STORE_PORT: 8099
       AUTH_PROVIDERS_HYLAND-EXPERIENCE-AUTH_CLIENT-ID: dummy-client-id
-      AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-pass
+      AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-secret
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
-      AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://localhost:8002/token
+      AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://hxinsight-mock:8080/token
     ports:
       - "5007:5007"
 
@@ -317,12 +317,14 @@ services:
       LOGGING_LEVEL_ORG_ALFRESCO: DEBUG
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
       AUTH_PROVIDERS_HYLAND-EXPERIENCE-AUTH_CLIENT-ID: dummy-client-id
-      AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-pass
+      AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-secret
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
-      AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://localhost:8002/token
+      AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://hxinsight-mock:8080/token
       AUTH_PROVIDERS_ALFRESCO_CLIENT-ID: dummy-client-id
       AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
       AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
+      HYLAND-EXPERIENCE_INSIGHT_PREDICTIONS_SOURCE-BASE-URL: http://hxinsight-mock:8080
+      ALFRESCO_REPOSITORY_BASE-URL: http://alfresco:8080
     ports:
       - "5009:5009"
 
