--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -40,6 +40,10 @@
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
             <artifactId>alfresco-hxinsight-connector-common-test</artifactId>
             <scope>test</scope>
             <exclusions>
@@ -128,6 +132,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common</include>
+                                    <include>org.alfresco:alfresco-hxinsight-connector-common-authentication</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
